--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,6 @@ body {
     font-size: 4rem;
     font-weight: 700;
     color: var(--light-color);
-    margin-bottom: 20px;
     text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     animation: title-pulse 2s infinite;
 }
@@ -266,6 +265,13 @@ body {
     transition: var(--transition);
 }
 
+.photo-placeholder img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* atau cover, tergantung selera */
+  border-radius: 10px;
+}
+
 .photo-placeholder:hover {
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -312,6 +318,13 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+}
+
+.memory-placeholder img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* atau cover, tergantung selera */
+  border-radius: 10px;
 }
 
 /* Video Section */
@@ -685,6 +698,12 @@ video:focus {
     -webkit-text-fill-color: transparent;
     background-clip: text;
     animation: rainbow-text 4s ease infinite;
+}
+
+.txt-glow-div {
+    border-radius: 36px;
+    padding: 12px 24px;
+    margin: 10px 10px 20px 10px;
 }
 
 .glow {
